--- a/extension/assets/css.css
+++ b/extension/assets/css.css
@@ -2,10 +2,18 @@
 	background: #E62117 url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAQAAABKfvVzAAAAR0lEQVR4AWMYlOB/0P+X/4kBr/4HQjS8AnJ+EIYgLRANQECUS4BgVAOKJBoY1UDTeEAk7z+EIVDVC4gGfyIz0Iv/vgyDEQAAH6Z6cWQjPrUAAAAASUVORK5CYII=') center no-repeat;
 	border-radius: 4px;
 	border-radius: 50%;
+	bottom: 16px;
+	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 	cursor: pointer;
-	height: 40px;
-	position: absolute;
+	height: 48px;
+	position: fixed;
 	right: 16px;
-	top: 16px;
-	width: 40px;
+	transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+	width: 48px;
+	outline: none;
+	border: none;
+}
+
+#pip:hover {
+	box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
